--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Ashley Sullins</title>
+
+    <!-- Bootstrap -->
+    <link href="css/style.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1 class="title">Ashley Sullins</h1>
+      </div>
+      <div class="nav">
+        <hr>
+        <nav>
+          <ul class="nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="project.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+          <hr>
+         </nav> 
+      </div>
+
+      <div class="column-1">
+        <h2>Welcome</h2>
+        <p>Glad you're here. Feel free to browse around and learn more about my work experience and website projects by using the navigation above. You can also contact me if you have any additional questions. I look forward to hearing from you! </p>
+
+        <h2>Social</h2>
+        <a href="https://www.facebook.com/ashleydsullins" target="_blank"><img src="img/Facebook.svg" alt="img/Facebook.png"></a>
+        <a href="https://www.instagram.com" target="_blank"><img src="img/Instagram.svg" alt="img/Instagram.png"></a>
+        <a href="https://www.linkedin.com/in/ashleysullins" target="_blank"><img src="img/Linkedin.svg" alt="img/Linkedin.png"></a>
+        <a href="https://www.pinterest.com/mizashley0921/" target="_blank"> <img src="img/Pinterest.svg" alt="img/Pinterest.png"></a>
+
+
+      </div>
+      <div class="column-2">
+        <h3>Web development resources</h3>
+        <p>Here are a couple of sites that I've found helpful as I continue to learn about software development. Hopefully they will be beneficial for you as well.</p>
+      <ul class="resources">
+        <li><a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></li>
+        <li><a href="http://www.codecademy.com/" target="_blank">Codecademy</a></li>
+        <li><a href="https://www.girldevelopit.com/" target="_blank">Girl Develop it!</a></li>
+        <li><a href="http://skillcrush.com/" target="_blank">Skillcrush</a></li>
+        <li><a href="https://www.khanacademy.org/" target="_blank">Khan Academy</a></li>
+        <li><a href="http://learnrubythehardway.org/" target="_blank">Learn Ruby The Hard Way</a></li>
+        <li><a href="http://cli.learncodethehardway.org/book/" target="_blank">Command Line Crash Course</a></li>
+        <li><a href="https://www.learnhowtoprogram.com/" target="_blank"> Learn How to Program</a></li>
+      </ul>
+      </div>
+    </div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
+</html>
