Add project and contact pages

--- a/about.html
+++ b/about.html
@@ -23,10 +23,10 @@
       <div class="header">
         <h1 class="title">Ashley Sullins</h1>
       </div>
-      <div class="nav">
+      <div class="my-nav">
         <hr>
         <nav>
-          <ul class="nav">
+          <ul class="my-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="project.html">Projects</a></li>
