Site css changes and edits

--- a/about.html
+++ b/about.html
@@ -7,9 +7,10 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Ashley Sullins</title>
 
-    <!-- Bootstrap -->
     <link href="css/style.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -39,9 +40,8 @@
       <div class="column-1">
         <h2>About</h2>
         <h4>Hi. I'm Ashley. Nice to meet ya.</h4>
-        <p>I've spent the last four years working at tech start ups in the Kansas City area, doing everything from operations to project management to quality assurance testing. During that time, I've been fortunate to work with awesome mentors who have taught me that sofware doesn't work by magic. There's an entire stack of applications working together, making sure that the credit card autopayment you scheduled will actually get paid on that day and why it might not. The more I learn, the greater my curiosity becomes about how the technology I use everyday works. </p>
-        <p>I love working on small teams with passionate people who want to be the best. If that sounds like your team, feel free to <a href="contact.html">contact me</a> and we'll talk. </p>
-
+        <p>I've spent the last four years working at tech start ups in the Kansas City area, doing everything from operations to project management to quality assurance testing. During that time, I've been fortunate to work with awesome mentors who have taught me that sofware doesn't work by magic. There's an entire stack of applications working together, making sure that the credit card autopayment you scheduled will actually get paid on that day (and also finding out why it might not). The more I learn, the greater my curiosity becomes about how the technology I use everyday works. </p>
+        <p>I love working on small teams with passionate people who want to be the best. If that sounds like your team, feel free to <a href="contact.html">contact me</a>. </p>
 
       </div>
       <div class="column-2">
@@ -57,9 +57,5 @@
       </div>
     </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
