--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,10 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Ashley Sullins</title>
 
-    <!-- Bootstrap -->
     <link href="css/style.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -42,20 +43,20 @@
           <form id="form1" name="form1" class="wufoo topLabel page" accept-charset="UTF-8" autocomplete="off" enctype="multipart/form-data" method="post" novalidate action="https://asullins.wufoo.com/forms/z1wsul1d1xwciuq/#public">
   
 
-            <span>
-            <input id="Field1" name="Field1" type="text" class="field text fn" value="" placeholder="First Name" tabindex="1"       />
-            </span>
-            <span>
-            <input id="Field2" name="Field2" type="text" class="field text ln" value="" placeholder="Last Name" size="14" tabindex="2" />
-            </span>
-            <div>
-            <input id="Field15" name="Field15" type="email" spellcheck="false" class="field text medium" value="" placeholder="Email Address" maxlength="255" tabindex="3"       />
+            <div class="form-group">
+            <input id="Field1" name="Field1" type="text" class="field text fn form-control" value="" placeholder="First Name" tabindex="1"       />
             </div>
-            <div>
-            <textarea id="Field16" name="Field16" class="field textarea large" value="" placeholder="Whatcha Say?" spellcheck="true" rows="10" cols="50" tabindex="4"></textarea>
+            <div class="form-group">
+            <input id="Field2" name="Field2" type="text" class="field text ln form-control" value="" placeholder="Last Name" size="14" tabindex="2" />
+            </div>
+            <div class="form-group">
+            <input id="Field15" name="Field15" type="email" spellcheck="false" class="field text medium form-control" value="" placeholder="Email Address" maxlength="255" tabindex="3"       />
+            </div>
+            <div class="form-group">
+            <textarea id="Field16" name="Field16" class="field textarea large form-control" value="" placeholder="Whatcha Say?" spellcheck="true" rows="10" cols="50" tabindex="4"></textarea>
             </div>
           <div>
-          <input id="saveForm" name="saveForm" class="btTxt submit" type="submit" value="Submit"/>
+          <input id="saveForm" name="saveForm" class="btTxt submit btn btn-default" type="submit" value="Submit"/>
           <input type="hidden" id="idstamp" name="idstamp" value="oNGSnK+vX2IZ9BLW7/h3+8RtOnTHYm54yStTOH+DiGE=" />
           </div>
 
@@ -65,9 +66,10 @@
          </ul>
       </div>
     </div>
+    
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </body>
 </html>
