--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $(window).scroll(function(){
+          $('*[class^="prlx"]').each(function(r){
+            var pos = $(this).offset().top;
+            var scrolled = $(window).scrollTop();
+              $('*[class^="prlx"]').css('top', -(scrolled * 0.5) + 'px');     
+            });
+        });
+      });
+    </script>
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Ashley Sullins</title>
-    <link href="css/style.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,7 +31,7 @@
     <![endif]-->
   </head>
   <body>
-    <div class="container-fluid">
+<!--     <div class="container-fluid">
       <div class="navbar navbar-default navbar-fixed-top">
         <nav>
           <ul class="nav nav-justified">
@@ -29,41 +41,52 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
          </nav> 
-    </div>
+    </div> -->
 
-      <div class="area" id="1">
-        <h2>Welcome</h2>
-        <p>Glad you're here. Feel free to browse around and learn more about my work experience and website projects by using the navigation above. You can also contact me if you have any additional questions. I look forward to hearing from you! </p>
-      </div>
-      <div class="area" id="2">
+      <section class="section-one">
+        <a name="home"></a>
+        <div class="prlx-1"></div>
+        <h2>Ashley Sullins</h2>
+        <div class="top-social"> 
+              <a href="https://www.github.com/ashleysullins" target="_blank"><img src="img/Github.svg" alt="img/Github.png"></a>
+              <a href="https://www.linkedin.com/in/ashleysullins" target="_blank"><img src="img/LinkedIn.svg" alt="img/LinkedIn.png"></a>
+              <a href="https://www.facebook.com/ashleydsullins" target="_blank"><img src="img/Facebook.svg" alt="img/Facebook.png"></a>
+              <a href="https://www.pinterest.com/mizashley0921/" target="_blank"> <img src="img/Pinterest.svg" alt="img/Pinterest.png"></a>
+            </div>
+      </section>
+      <section class="section-two">
+        <a name="about"></a>
         <h2>About</h2>
         <div class="row">
           <div class="col-md-8">
           <h4>Hi. I'm Ashley. Nice to meet ya.</h4>
-          <p>I've spent the last four years working at tech start ups in the Kansas City area, doing everything from operations to project management to quality assurance testing. During that time, I've been fortunate to work with awesome mentors who have taught me about software development. I wanted to expand my studies, which led me to Portland, where I studied Java, Javascript and Android development at <a href="http://www.epicodus.com" target="_blank">Epicodus</a> in 2015. I'm looking forward to putting my new skills to work back in KC. </p>
+          <p>I've spent the last four years working at tech start ups in the Kansas City area, doing everything from operations to project management to quality assurance testing. During that time, I've been fortunate to work with awesome mentors who have taught me about software development. I wanted to expand my studies, which led me to Portland, where I studied Java, Javascript and Android development at <a href="http://www.epicodus.com" target="_blank">Epicodus</a> in 2015. </p>
           <p>I love working on small teams with passionate people who want to be the best. If that sounds like your team, feel free to <a href="#contact">contact me</a>. </p>
         </div>
-        <div class="col-md-4">
-          <h4> Skills </h4>
-          <span class="skills-category"><p>Development</class></p>
+        <div class="col-md-4 skills">
+          <h4><span class="skills">Skills</span></h4>
+          <p><span class="skills-category">Development</span></p>
           <ul>
             <li>HTML</li>
             <li>CSS</li>
             <li>Git</li>
             <li>Command Line</li>
             <li>Javascript</li>
-            <li>Android</li>
+            <li>Android Studio </li>
+            <li>Gradle</li>
           </ul>
-          <span class="skills-category"><p>Quality Assurance</class></p>
+          <p><span class="skills-category">Quality Assurance</span></p>
             <ul>
               <li>JUnit</li>
               <li>Selenium</li>
               <li>Manual Testing</li>
             </ul>
       </div>
-      </div>
-      <div class="area" id="3">
-        <h2>Projects</h2>
+      </section>
+      <section class="section-three">
+        <a name="projects"></a>
+        <div class="prlx-2"></div>
+        <h2><span class="projects">Projects</span></h2>
           <div class="row">
             <div class="col-md-4">
               <img src="img/storedgehelphome.png" class="img-responsive">
@@ -82,11 +105,11 @@
             <div class="col-md-4">
               <img src="img/funimages.png" class="img-responsive">
             </div>
-          </div>
-        
-      </div>
-      <div class="area" id="4">
-        <h2>Be Social</h2>
+          </div>  
+      </section>
+      <section class="section-four">
+        <a name="contact"></a>
+        <h2>Contact Me</h2>
         <div class="row">
           <div class="col-md-6">
             <form id="form1" name="form1" class="wufoo topLabel page" accept-charset="UTF-8" autocomplete="off" enctype="multipart/form-data" method="post" novalidate action="https://asullins.wufoo.com/forms/z1wsul1d1xwciuq/#public">
@@ -100,10 +123,10 @@
               <input id="Field15" name="Field15" type="email" spellcheck="false" class="field text medium form-control" value="" placeholder="Email Address" maxlength="255" tabindex="3"       />
               </div>
               <div class="form-group">
-              <textarea id="Field16" name="Field16" class="field textarea large form-control" value="" placeholder="" spellcheck="true" rows="10" cols="50" tabindex="4"></textarea>
+              <textarea id="Field16" name="Field16" class="field textarea large form-control" value="" placeholder="Message" spellcheck="true" rows="10" cols="50" tabindex="4"></textarea>
               </div>
             <div>
-            <input id="saveForm" name="saveForm" class="btTxt submit btn btn-default" type="submit" value="Submit"/>
+            <input id="saveForm" name="saveForm" class="submit btn btn-default" type="submit" value="Submit"/>
             <input type="hidden" id="idstamp" name="idstamp" value="oNGSnK+vX2IZ9BLW7/h3+8RtOnTHYm54yStTOH+DiGE=" />
             </div>
           </div>
@@ -115,7 +138,7 @@
               <a href="https://www.pinterest.com/mizashley0921/" target="_blank"> <img src="img/Pinterest.svg" alt="img/Pinterest.png"></a>
             </div>
         </div>
-      </div>
+      </section>
       <div class="footer">
 
     </div>
