--- a/index.html
+++ b/index.html
@@ -3,24 +3,48 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel='shortcut icon' href='img/favicon.ico' type='image/x-icon'/ > 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function() {
-        $(window).scroll(function(){
-          $('*[class^="prlx"]').each(function(r){
-            var pos = $(this).offset().top;
-            var scrolled = $(window).scrollTop();
-              $('*[class^="prlx"]').css('top', -(scrolled * 0.5) + 'px');     
-            });
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>    
+      <script type="text/javascript">
+      $(function() {
+        // Insert Responsive Sidebar Icon
+        $('<div class="responsive-nav-icon" />').appendTo('.section-one');
+        $('<div class="responsive-nav-close" />').appendTo('nav');
+        $('<div id="overlay" />').insertAfter('footer');
+
+        // Navigation Slide In
+        $('.responsive-nav-icon').click(function() {
+          $('nav').addClass('slide-in');
+          $('html').css("overflow", "hidden");
+          $('#overlay').show();
+          return false;
+        });
+
+        // Navigation Slide Out
+        $('#overlay, .responsive-nav-close').click(function() {
+          $('nav').removeClass('slide-in');
+          $('html').css("overflow", "auto");
+          $('#overlay').hide();
+          return false;
         });
       });
-    </script>
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+      </script>
+      <script type="text/javascript">
+        $(document).ready(function() {
+          $(window).scroll(function(){
+            $('*[class^="prlx"]').each(function(r){
+              var pos = $(this).offset().top;
+              var scrolled = $(window).scrollTop();
+              $('*[class^="prlx"]').css('top', -(scrolled * 0.5) + 'px');     
+              });
+            });
+          });
+        </script>
     <title>Ashley Sullins</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -31,31 +55,32 @@
     <![endif]-->
   </head>
   <body>
-<!--     <div class="container-fluid">
-      <div class="navbar navbar-default navbar-fixed-top">
-        <nav>
-          <ul class="nav nav-justified">
-            <li><a href="#welcome">Welcome</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#project">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-         </nav> 
-    </div> -->
-
+    <div class="container-fluid">
+     <header class="site-header" itemtype="http://schema.org/WPHeader" itemscope="itemscope" role="banner">
+      <div class="wrap">
+        <nav itemtype="http://schema.org/SiteNavigationElement" itemscope="itemscope" role="navigation">
+          <ul class="menu">
+              <li class="menu-item"><a href="#welcome">Welcome</a></li>
+              <li class="menu-item"><a href="#about">About</a></li>
+              <li class="menu-item"><a href="#projects">Projects</a></li>
+              <li class="menu-item"><a href="#contact">Contact</a></li>
+            </ul> 
+         </nav>
+        </div>
+       </header>
+      <a name="welcome"></a>
       <section class="section-one">
-        <a name="home"></a>
         <div class="prlx-1"></div>
         <h2>Ashley Sullins</h2>
         <div class="top-social"> 
-              <a href="https://www.github.com/ashleysullins" target="_blank"><img src="img/Github.svg" alt="img/Github.png"></a>
-              <a href="https://www.linkedin.com/in/ashleysullins" target="_blank"><img src="img/LinkedIn.svg" alt="img/LinkedIn.png"></a>
-              <a href="https://www.facebook.com/ashleydsullins" target="_blank"><img src="img/Facebook.svg" alt="img/Facebook.png"></a>
-              <a href="https://www.pinterest.com/mizashley0921/" target="_blank"> <img src="img/Pinterest.svg" alt="img/Pinterest.png"></a>
+              <a href="https://www.github.com/ashleysullins" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+              <a href="https://www.linkedin.com/in/ashleysullins" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
+              <a href="https://www.facebook.com/ashleydsullins" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
+              <a href="https://www.pinterest.com/mizashley0921/" target="_blank"><i class="fa fa-pinterest fa-2x"></i></a>
             </div>
       </section>
+      <a name="about"></a>
       <section class="section-two">
-        <a name="about"></a>
         <h2>About</h2>
         <div class="row">
           <div class="col-md-8">
@@ -83,8 +108,8 @@
             </ul>
       </div>
       </section>
+      <a name="projects"></a>
       <section class="section-three">
-        <a name="projects"></a>
         <div class="prlx-2"></div>
         <h2><span class="projects">Projects</span></h2>
           <div class="row">
@@ -107,8 +132,8 @@
             </div>
           </div>  
       </section>
+      <a name="contact"></a>
       <section class="section-four">
-        <a name="contact"></a>
         <h2>Contact Me</h2>
         <div class="row">
           <div class="col-md-6">
@@ -132,15 +157,15 @@
           </div>
           <div class="col-md-4">
             <div class="social"> 
-              <a href="https://www.github.com/ashleysullins" target="_blank"><img src="img/Github.svg" alt="img/Github.png"></a>
-              <a href="https://www.linkedin.com/in/ashleysullins" target="_blank"><img src="img/LinkedIn.svg" alt="img/LinkedIn.png"></a>
-              <a href="https://www.facebook.com/ashleydsullins" target="_blank"><img src="img/Facebook.svg" alt="img/Facebook.png"></a>
-              <a href="https://www.pinterest.com/mizashley0921/" target="_blank"> <img src="img/Pinterest.svg" alt="img/Pinterest.png"></a>
+              <br><a href="https://www.github.com/ashleysullins" target="_blank"><i class="fa fa-github fa-2x"></i> asullins</a></br>
+              <br><a href="https://www.linkedin.com/in/ashleysullins" target="_blank"><i class="fa fa-linkedin fa-2x"></i> ashleysullins</a></br>
+              <br><a href="https://www.facebook.com/ashleydsullins" target="_blank"><i class="fa fa-facebook fa-2x"></i> ashleydsullins</a></br>
+              <br><a href="https://www.pinterest.com/mizashley0921/" target="_blank"><i class="fa fa-pinterest fa-2x"></i> mizashley0921</a></br>
             </div>
         </div>
       </section>
-      <div class="footer">
-
+      <footer class="site-footer" itemtype="http://schema.org/WPFooter" itemscope="itemscope" role="contentinfo">
+      </footer>
     </div>
   </body>
 </html>
