Add lightbox descriptions

--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel='shortcut icon' href='img/favicon.ico' type='image/x-icon'/ > 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>  
+    <!-- Add mousewheel plugin (this is optional) -->
+    <script type="text/javascript" src="fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
+    <!-- Add fancyBox -->
+    <link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
+    <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+    <!-- Optionally add helpers - button, thumbnail and/or media -->
+    <link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
+    <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+    <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
+
+    <link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
+    <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>  
       <script type="text/javascript">
       $(function() {
         // Insert Responsive Sidebar Icon
@@ -41,12 +53,26 @@
             });
           });
         </script>
+        <script type="text/javascript">
+        $(document).ready(function() {
+          $(".popup").fancybox({
+            maxWidth  : 800,
+            maxHeight : 600,
+            fitToView : true,
+            width   : '70%',
+            height    : '70%',
+            autoSize  : false,
+            closeClick  : false,
+            openEffect  : 'none',
+            closeEffect : 'none'
+          });
+        });
+        </script>
     <title>Ashley Sullins</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href="css/style.css" rel="stylesheet">
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -114,21 +140,110 @@
         <h2><span class="projects">Projects</span></h2>
           <div class="row">
             <div class="col-md-4">
-              <img src="img/storedgehelphome.png" class="img-responsive">
+              <a class="popup" href="#storedge"><img src="img/storedgehelphome.png" class="img-responsive"></a>
+                <div id="storedge" style="display:none">
+                  <h3>storEDGE Help</h3>
+                  <div class="row">
+                    <div class="col-md-5">
+                      <p><img src="img/storedgehelphome.png" class="img-responsive"></p>
+                      <p><img src="img/storedgehelpsubnav.png" class="img-responsive"></p>
+                    </div>
+                    <div class="col-md-5">
+                    <p><span class="title">Description:</span> This is a help site used to assist clients in learning more about how to use the software built by storEDGE.</p>
+
+                    <p><span class="title">My contribution:</span> I implemented the style for the site by customizing a responsive ZenDesk template using CSS and HTML.</p>
+
+                    <p>Designed by Natasha Gasswint.</p>
+
+                    <p><span class="title">URL:</span> <a href="http://help.storedge.com" target="_blank">help.storedge.com</a></p>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="col-md-4">
-              <img src="img/helpqueue.png" class="img-responsive">
+              <a class="popup" href="#helpqueue"><img src="img/helpqueue.png" class="img-responsive"></a>
+                <div id="helpqueue" style="display:none">
+                  <h3>Help Queue</h3>
+                  <div class="row">
+                    <div class="col-md-5">
+                      <p><img src="img/helpqueue.png" class="img-responsive"></p>
+                    </div>
+                    <div class="col-md-5">
+                    <p><span class="title">Description:</span> This is a help queue that is used when code school students have questions for their instructor during class. A pair of students will submit a question and the teacher will help them on a first come, first serve basis.</p>
+
+                    <p><span class="title">My contribution:</span> I pair programmed with Summer Brochtrup to create this site, focusing on the backend JavaScript.</p>
+
+                    <p><span class="title">Technologies used:</span> Ember.js, Bootstrap, HTML, CSS, and Firebase.
+
+                    <p><span class="title">URL:</span> <a href="https://help-queue-app.firebaseapp.com/" target="_blank">help-queue-app.firebaseapp.com</a></p>
+                  </div>
+                </div>
+              </div>
+
             </div>
             <div class="col-md-4">
-              <img src="img/codeoverload.png" class="img-responsive">
-            </div>
+              <a class="popup" href="#codeoverload"><img src="img/codeoverload.png" class="img-responsive"></a>
+                <div id="codeoverload" style="display:none">
+                  <h3>Code Overload</h3>
+                  <div class="row">
+                    <div class="col-md-5">
+                      <p><img src="img/codeoverload.png" class="img-responsive"></p>
+                    </div>
+                    <div class="col-md-5">
+                    <p><span class="title">Description:</span> Code-overload is a Stack Overflow-eque website where you can find out all of the answers to your burning questions about coding and people will give you suggestions on how to fix the issue. Questions can be posted and edited by users, and answers can be submitted on each individual question page.</p>
+
+                    <p><span class="title">My contribution:</span> This was an individual project to test our knowledge of Ember.</p>
+
+                    <p><span class="title">Technologies used:</span> Ember.js, Bootstrap, HTML, CSS, and Firebase.
+
+                    <p><span class="title">URL:</span> <a href="https://code-overload.firebaseapp.com/" target="_blank">code-overload.firebaseapp.com</a></p>
+                  </div>
+                </div>
+              </div>
+
           </div>
+        </div>
           <div class="row">
             <div class="col-md-4">
-              <img src="img/tourguidepdx.png" class="img-responsive">
+              <a class="popup" href="#tourguidepdx"><img src="img/tourguidepdx.png" class="img-responsive"></a>
+               <div id="tourguidepdx" style="display:none">
+                  <h3>Tour Guide PDX</h3>
+                  <div class="row">
+                    <div class="col-md-5">
+                      <p><img src="img/tourguidepdx.png" class="img-responsive"></p>
+                      <p><img src="img/tourguidepdx2.png" class="img-responsive"></p>
+                    </div>
+                    <div class="col-md-5">
+                    <p><span class="title">Description:</span> Tour Guide PDX is an Android app used to assist new visitors to Portland. It highlights the most unique dining, drinking establishments, and attractions in the area.</p>
+
+                    <p><span class="title">My contribution:</span> This was an individual project to test our knowledge of how to create an Android application.</p>
+
+                    <p><span class="title">Technologies used:</span> Android Studio, Gradle, Java, Parse.
+
+                     <p><span class="title">URL:</span> <a href="https://github.com/ashleysullins/TourGuidePDX" target="_blank">github.com/ashleysullins/TourGuidePDX</a></p> 
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="col-md-4">
-              <img src="img/funimages.png" class="img-responsive">
+              <a class="popup" href="#funimages"><img src="img/funimages.png" class="img-responsive"></a>
+              <div id="funimages" style="display:none">
+                  <h3>Fun Images</h3>
+                  <div class="row">
+                    <div class="col-md-5">
+                      <p><img src="img/funimages.png" class="img-responsive"></p>
+                    </div>
+                    <div class="col-md-5">
+                    <p><span class="title">Description:</span> This app will allow you to see images from Flickr based on a keyword you provide. When you shake your phone, it will show a new image based on the same keyword.</p>
+
+                    <p><span class="title">My contribution:</span> I pair programmed with Yvonne Peng to create this application to learn how to use data from API's and the Android system's internal motion detector.</p>
+
+                    <p><span class="title">Technologies used:</span> Android Studio, Gradle, Java, Flickr API.
+
+                    <p><span class="title">URL:</span> <a href="https://github.com/ashleysullins/FunImages-Android" target="_blank">github.com/ashleysullins/FunImages-Android</a></p>  
+                  </div>
+                </div>
+              </div>
             </div>
           </div>  
       </section>
