--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="row">
           <div class="col-md-8">
           <h4>Hi. I'm Ashley. Nice to meet ya.</h4>
-          <p>I've spent the last four years working at tech start ups in the Kansas City area, doing everything from operations to project management to quality assurance testing. During that time, I've been fortunate to work with awesome mentors who have taught me about software development. I wanted to expand my studies, which led me to Portland, where I studied Java, Javascript and Android development at <a href="http://www.epicodus.com" target="_blank">Epicodus</a> in 2015. </p>
+          <p>I've spent the last four years working at tech start ups in the Kansas City area, doing everything from operations to project management to quality assurance testing. During that time, I've been fortunate to work with mentors who inspired me to learn more about software development. I desired more time to focus on my education, which led me to Portland, where I studied Java, Javascript and Android development at <a href="http://www.epicodus.com" target="_blank">Epicodus</a> in 2015.</p>
           <p>I love working on small teams with passionate people who want to be the best. If that sounds like your team, feel free to <a href="#contact">contact me</a>. </p>
         </div>
         <div class="col-md-4 skills">
@@ -141,7 +141,7 @@
           <div class="row">
             <div class="col-md-4">
               <a class="popup" href="#storedge"><img src="img/storedgehelphome.png" class="img-responsive"></a>
-                <div id="storedge" style="display:none">
+                <div class="info" id="storedge">
                   <h3>storEDGE Help</h3>
                   <div class="row">
                     <div class="col-md-5">
@@ -155,14 +155,14 @@
 
                     <p>Designed by Natasha Gasswint.</p>
 
-                    <p><span class="title">URL:</span> <a href="http://help.storedge.com" target="_blank">help.storedge.com</a></p>
+                    <p><a href="http://help.storedge.com" target="_blank">help.storedge.com</a></p>
                   </div>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
               <a class="popup" href="#helpqueue"><img src="img/helpqueue.png" class="img-responsive"></a>
-                <div id="helpqueue" style="display:none">
+                <div class="info" id="helpqueue">
                   <h3>Help Queue</h3>
                   <div class="row">
                     <div class="col-md-5">
@@ -175,7 +175,7 @@
 
                     <p><span class="title">Technologies used:</span> Ember.js, Bootstrap, HTML, CSS, and Firebase.
 
-                    <p><span class="title">URL:</span> <a href="https://help-queue-app.firebaseapp.com/" target="_blank">help-queue-app.firebaseapp.com</a></p>
+                    <p><a href="https://help-queue-app.firebaseapp.com/" target="_blank">help-queue-app.firebaseapp.com</a></p>
                   </div>
                 </div>
               </div>
@@ -183,20 +183,20 @@
             </div>
             <div class="col-md-4">
               <a class="popup" href="#codeoverload"><img src="img/codeoverload.png" class="img-responsive"></a>
-                <div id="codeoverload" style="display:none">
+                <div class="info" id="codeoverload">
                   <h3>Code Overload</h3>
                   <div class="row">
                     <div class="col-md-5">
                       <p><img src="img/codeoverload.png" class="img-responsive"></p>
                     </div>
                     <div class="col-md-5">
-                    <p><span class="title">Description:</span> Code-overload is a Stack Overflow-eque website where you can find out all of the answers to your burning questions about coding and people will give you suggestions on how to fix the issue. Questions can be posted and edited by users, and answers can be submitted on each individual question page.</p>
+                    <p><span class="title">Description:</span> Code Overload is a Stack Overflow-eque website where you can find out all of the answers to your burning questions about coding and people will give you suggestions on how to fix the issue. Questions can be posted and edited by users, and answers can be submitted on each individual question page.</p>
 
                     <p><span class="title">My contribution:</span> This was an individual project to test our knowledge of Ember.</p>
 
                     <p><span class="title">Technologies used:</span> Ember.js, Bootstrap, HTML, CSS, and Firebase.
 
-                    <p><span class="title">URL:</span> <a href="https://code-overload.firebaseapp.com/" target="_blank">code-overload.firebaseapp.com</a></p>
+                    <p> <a href="https://code-overload.firebaseapp.com/" target="_blank">code-overload.firebaseapp.com</a></p>
                   </div>
                 </div>
               </div>
@@ -206,7 +206,7 @@
           <div class="row">
             <div class="col-md-4">
               <a class="popup" href="#tourguidepdx"><img src="img/tourguidepdx.png" class="img-responsive"></a>
-               <div id="tourguidepdx" style="display:none">
+               <div class="info" id="tourguidepdx">
                   <h3>Tour Guide PDX</h3>
                   <div class="row">
                     <div class="col-md-5">
@@ -220,14 +220,14 @@
 
                     <p><span class="title">Technologies used:</span> Android Studio, Gradle, Java, Parse.
 
-                     <p><span class="title">URL:</span> <a href="https://github.com/ashleysullins/TourGuidePDX" target="_blank">github.com/ashleysullins/TourGuidePDX</a></p> 
+                     <p><a href="https://github.com/ashleysullins/TourGuidePDX" target="_blank">Repository</a></p> 
                   </div>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
               <a class="popup" href="#funimages"><img src="img/funimages.png" class="img-responsive"></a>
-              <div id="funimages" style="display:none">
+              <div class="info" id="funimages">
                   <h3>Fun Images</h3>
                   <div class="row">
                     <div class="col-md-5">
@@ -236,11 +236,11 @@
                     <div class="col-md-5">
                     <p><span class="title">Description:</span> This app will allow you to see images from Flickr based on a keyword you provide. When you shake your phone, it will show a new image based on the same keyword.</p>
 
-                    <p><span class="title">My contribution:</span> I pair programmed with Yvonne Peng to create this application to learn how to use data from API's and the Android system's internal motion detector.</p>
+                    <p><span class="title">My contribution:</span> I pair programmed with Yvonne Peng to create this application to learn how to use data from APIs and the Android system's internal motion detector.</p>
 
                     <p><span class="title">Technologies used:</span> Android Studio, Gradle, Java, Flickr API.
 
-                    <p><span class="title">URL:</span> <a href="https://github.com/ashleysullins/FunImages-Android" target="_blank">github.com/ashleysullins/FunImages-Android</a></p>  
+                    <p><a href="https://github.com/ashleysullins/FunImages-Android" target="_blank">Repository</a></p>  
                   </div>
                 </div>
               </div>
