--- a/index.html
+++ b/index.html
@@ -5,80 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel='shortcut icon' href='img/favicon.ico' type='image/x-icon'/ > 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>  
-    <!-- Add mousewheel plugin (this is optional) -->
-    <script type="text/javascript" src="fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
-    <!-- Add fancyBox -->
-    <link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
-    <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
-    <!-- Optionally add helpers - button, thumbnail and/or media -->
-    <link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
-    <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
-    <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
-
-    <link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
-    <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>  
-      <script type="text/javascript">
-      $(function() {
-        // Insert Responsive Sidebar Icon
-        $('<div class="responsive-nav-icon" />').appendTo('.section-one');
-        $('<div class="responsive-nav-close" />').appendTo('nav');
-        $('<div id="overlay" />').insertAfter('footer');
-
-        // Navigation Slide In
-        $('.responsive-nav-icon').click(function() {
-          $('nav').addClass('slide-in');
-          $('html').css("overflow", "hidden");
-          $('#overlay').show();
-          return false;
-        });
-
-        // Navigation Slide Out
-        $('#overlay, .responsive-nav-close').click(function() {
-          $('nav').removeClass('slide-in');
-          $('html').css("overflow", "auto");
-          $('#overlay').hide();
-          return false;
-        });
-      });
-      </script>
-      <script type="text/javascript">
-        $(document).ready(function() {
-          $(window).scroll(function(){
-            $('*[class^="prlx"]').each(function(r){
-              var pos = $(this).offset().top;
-              var scrolled = $(window).scrollTop();
-              $('*[class^="prlx"]').css('top', -(scrolled * 0.5) + 'px');     
-              });
-            });
-          });
-        </script>
-        <script type="text/javascript">
-        $(document).ready(function() {
-          $(".popup").fancybox({
-            maxWidth  : 800,
-            maxHeight : 600,
-            fitToView : true,
-            width   : '70%',
-            height    : '70%',
-            autoSize  : false,
-            closeClick  : false,
-            openEffect  : 'none',
-            closeEffect : 'none'
-          });
-        });
-        </script>
-    <title>Ashley Sullins</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href="css/style.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <title>Ashley Sullins</title>
   </head>
   <body>
     <div class="container-fluid">
@@ -282,5 +213,15 @@
       <footer class="site-footer" itemtype="http://schema.org/WPFooter" itemscope="itemscope" role="contentinfo">
       </footer>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>  
+    <script type="text/javascript" src="fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
+    <link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
+    <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+    <link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
+    <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+    <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
+    <link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
+    <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>  
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
